# monitor_sistema_mcv

./: .gitignore  Cargo.toml  README.md  log_sistema.json
linux/: info.txt
src/: main.rs
src/cli/: estructurar_CLi.txt  mod.rs
src/core/: cpu.rs  disco.rs  interfaces.rs  memoria.rs  mod.rs  procesos.rs
src/output/: estructurar_log.txt  json.rs  log.rs  mod.rs
