[package]
name = "monitor_sistema_mcv"
authors = ["Marcos Castellanos marcos.castellanos7815@alumnos.com.mx"]
description = "Sistema de monitoreo de sistema de la clase de programacion de sistemas avanzados - Profesor: Jorge Ernesto Lopez Arce"
version = "1.0.0"
edition = "2024"

[dependencies]
# Dependencias necesarias para el proyecto

# Para manejar la entrada y salida de datos
clap = { version = "4.5", features = ["derive"] }
# Para trabajar con hilos
tokio = { version = "1.0", features = ["full"] }

ipnetwork = { version = "0.20", features = ["serde"] }

#para información del sistema
sysinfo = "0.34.2" #info: https://docs.rs/sysinfo/latest/sysinfo/

# Para manejar fechas y horas
chrono = "0.4"
# Para manejar zonas horarias
chrono-tz = "0.8"

#serializar datos
serde = { version = "1.0", features = ["derive"] } 

#trabajo con JSON
serde_json = "1.0" # Para trabajar con JSON
